<resources>
    <string name="app_name">Aptamitra</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--
      generated Id's ::start
     -->
    <string name="APP_ID">1424653754518797</string>
    <string name="PROD_APP_ID">1635326400023336</string>
    <string name="NEW_APP_ID">836655326390465</string>
    <string name="gcm_senderId">416686821491</string>
    <!--
    generated Id's ::end
    -->
    <!-- web services url-->
    <string name="login_user_url">http://aptamitra.in/service_app/login.php</string>
    <string name="register_user_url">http://aptamitra.in/service_app/register.php</string>
    <string name="post_complaint">http://aptamitra.in/service_app/register_complaint.php</string>
    <string name="get_complaints">http://aptamitra.in/service_app/get_all_complaints.php</string>
    <string name="gcm_key_register">http://aptamitra.in/service_app/gcm_register.php</string>
    <string name="book_service">http://aptamitra.in/service_app/book_service.php</string>
    <string name="chat_link">http://aptamitra.in/service_app/user_to_admin.php</string>
    <string name="verify_user">http://aptamitra.in/service_app/verify_user.php?otp=</string>
    <string name="search_db">http://aptamitra.in/service_app/search_db.php</string>
    <string name="forgot_password">http://aptamitra.in/service_app/forgot_password.php?email=</string>
    <!-- How It Works Texts ::start -->
    <string name="text1">One Who makes his life better,\n by making others life better\n is an <b>Aptamitra</b></string>
    <string name="text2">Aptamitra will guide you to book\n the right professional for your\n essential needs.</string>
    <string name="text3">Aptamitra will bridge between\n the delivery network and your\n local favourite stores</string>
    <string name="text4">No More calls. Just message and\nGet more things accomplished with\na message via Aptamitra Near Me.</string>
    <string name="text5">My City is A Great Place to Live !\n with \n Aptamitra connecting your\ncivic issue to the right\npublic service professional</string>
    <!-- How It Works Texts ::end-->
    <!-- About Us Text-->
    <string name="abt1">We have found many people finding it difficult </string>
    <string name="abt2">1)	To know the right contact to report a civic issue. </string>
    <string name="abt3">2)	To find a plumber / electrician / carpenter who is reliable and can do a quality job. </string>
    <string name="abt4">3)	To get a door delivery of essential needs. </string>
    <string name="abt5">As a solution to the above, Aptamitra was born.</string>
    <string name="abt6">\t\t\t\tAptamitra is an online platform which connects users with certified service providers nearest to the user who can ensure availability, quality, reliability and diligent service. </string>
    <string name="abt7">How we do it </string>
    <string name="abt8">\t\t\t\tWe work with the bureaucrats of the civic agencies like BBMP, BESCOM, BWSSB, BMTC, BDA, Fire , Emergency etc so that just by a click an issue is directed to the inbox of the concerned personnel.</string>
    <string name="abt9">\t\t\t\tWe aggregate quality suppliers and ensure availability, quality and reliability.</string>
    <string name="abt10">\t\t\t\tWe ensure that each service provider has a testimonial of accomplishments and is certified for skills by a third party.</string>
    <string name="abt11">\t\t\t\tWe do a thorough background check of our service providers for address verification and police verification check to ensure customer safety.</string>
    <string name="abt12">\t\t\t\tWe are working on a Mobile Application platform for service providers to accept your requests and to reach your location on time. The customer is able to track the movement of the service provider and know exactly the estimated time of arrival.</string>
    <string name="abt13">\t\t\t\tThe service charges are mentioned ahead of the Task. Product cost would be charged on actuals and has to be borne by the customer.</string>
    <string name="menu_settings">Settings</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
    <!-- Privacy Policy Titles-->
    <string name="title1">"Your personal information"</string>
    <string name="title2">"What information is/may be collected from you?"</string>
    <string name="title3">"How do we collect the your information?"</string>
    <string name="title4">"How do we use your information?"</string>
    <string name="title5">"With whom will your information be shared"</string>
    <string name="title6">"How do we safeguard your information?"</string>
    <string name="title7">"How can you update/correct inaccuracies in your information?"</string>
    <string name="title8">"Policy updates"</string>
    <string-array name="landing_page">
        <item>My City</item>
        <item>My Booking</item>
        <item>My Delivery</item>
        <item>My Aptamitra</item>
    </string-array>
    <string name="search_text">Who is your Mitra today?</string>
    <string name="share_text">Dear Mitra, Namaste! Check out this must have app on your device . It is called as Aptamitra : Your Trusted Friend At Your Service . From resolving a streetlight issue to snake rescue, orFrom hiring a housemaid or repair professionals, to arranging a professional photographer for an event at home . Aptamitra connects you with the nearest professional service providers . They provide instant pick up and drop of anything all over Bengaluru . It can be keys, tiffin box, medicine,bill payment etc . Possibilities are endless . Basically they run errands for you . Just anything . Timings of service are 10 am to 11 pm . </string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=in.aptamitra&amp;hl=en</string>
</resources>
