<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/icon_back"
                />


            <TextView
                android:id="@+id/aboutus_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="About us"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abt1"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="7dip"
            android:layout_marginTop="5dip"
            android:text="@string/abt2"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="7dip"
            android:text="@string/abt3"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="7dip"
            android:text="@string/abt4"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt5"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt6"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt7"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="19sp"/>

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt8"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt9"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt10"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt11"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt12"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dip"
            android:text="@string/abt13"
            android:textColor="#000000"
            android:textSize="16sp"/>


    </LinearLayout>

</RelativeLayout>

</ScrollView>
</LinearLayout>